style: Create style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multi step register form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +24,7 @@
                 <select name="topics" id="topics" multiple>
                     <option value="software-dev">Software Development</option>
                     <option value="user-exp">User Experience</option>
-                    <option value="graphic-design">Graphicc Design</option>
+                    <option value="graphic-design">Graphic Design</option>
                 </select>
                 <button type="submit">Continue</button>
             </form>
